# solid-mcp-poc

./: .env.example  .gitignore  AGENTIC_FRAMEWORK_TEMPLATE.md  README.md  openapi.yaml  pyproject.toml
scripts/: e2e_openapi_test.py
solid_mcp_tool/: README.md  __init__.py  tool.py
src/soliddata_mcp_poc/: auth.py  config.py  crew.py  main.py  snowflake_connector_tool.py  snowflake_mcp_tool.py
